Enrich now playing api response (#111)
* Enrich now playing api response

* flake8
