# src/api/models/now_playing_item.py
@@ -1,0 +1,148 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from api.models.base_model_ import Model
+from api import util
+
+
+class NowPlayingItem(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, text: str=None, type: str=None, start_time: datetime=None, end_time: datetime=None):  # noqa: E501
+        """NowPlayingItem - a model defined in Swagger
+
+        :param text: The text of this NowPlayingItem.  # noqa: E501
+        :type text: str
+        :param type: The type of this NowPlayingItem.  # noqa: E501
+        :type type: str
+        :param start_time: The start_time of this NowPlayingItem.  # noqa: E501
+        :type start_time: datetime
+        :param end_time: The end_time of this NowPlayingItem.  # noqa: E501
+        :type end_time: datetime
+        """
+        self.swagger_types = {
+            'text': str,
+            'type': str,
+            'start_time': datetime,
+            'end_time': datetime
+        }
+
+        self.attribute_map = {
+            'text': 'text',
+            'type': 'type',
+            'start_time': 'start_time',
+            'end_time': 'end_time'
+        }
+        self._text = text
+        self._type = type
+        self._start_time = start_time
+        self._end_time = end_time
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'NowPlayingItem':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The NowPlayingItem of this NowPlayingItem.  # noqa: E501
+        :rtype: NowPlayingItem
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def text(self) -> str:
+        """Gets the text of this NowPlayingItem.
+
+
+        :return: The text of this NowPlayingItem.
+        :rtype: str
+        """
+        return self._text
+
+    @text.setter
+    def text(self, text: str):
+        """Sets the text of this NowPlayingItem.
+
+
+        :param text: The text of this NowPlayingItem.
+        :type text: str
+        """
+        if text is None:
+            raise ValueError("Invalid value for `text`, must not be `None`")  # noqa: E501
+
+        self._text = text
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this NowPlayingItem.
+
+
+        :return: The type of this NowPlayingItem.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this NowPlayingItem.
+
+
+        :param type: The type of this NowPlayingItem.
+        :type type: str
+        """
+        allowed_values = ["song", "programme"]  # noqa: E501
+        if type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `type` ({0}), must be one of {1}"
+                .format(type, allowed_values)
+            )
+
+        self._type = type
+
+    @property
+    def start_time(self) -> datetime:
+        """Gets the start_time of this NowPlayingItem.
+
+
+        :return: The start_time of this NowPlayingItem.
+        :rtype: datetime
+        """
+        return self._start_time
+
+    @start_time.setter
+    def start_time(self, start_time: datetime):
+        """Sets the start_time of this NowPlayingItem.
+
+
+        :param start_time: The start_time of this NowPlayingItem.
+        :type start_time: datetime
+        """
+
+        self._start_time = start_time
+
+    @property
+    def end_time(self) -> datetime:
+        """Gets the end_time of this NowPlayingItem.
+
+
+        :return: The end_time of this NowPlayingItem.
+        :rtype: datetime
+        """
+        return self._end_time
+
+    @end_time.setter
+    def end_time(self, end_time: datetime):
+        """Sets the end_time of this NowPlayingItem.
+
+
+        :param end_time: The end_time of this NowPlayingItem.
+        :type end_time: datetime
+        """
+
+        self._end_time = end_time
