# src/api/models/now_playing_item_list.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from api.models.base_model_ import Model
+from api.models.one_of_now_playing_item_list_items_items import OneOfNowPlayingItemListItemsItems  # noqa: F401,E501
+from api import util
+
+
+class NowPlayingItemList(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, items: List[OneOfNowPlayingItemListItemsItems]=None):  # noqa: E501
+        """NowPlayingItemList - a model defined in Swagger
+
+        :param items: The items of this NowPlayingItemList.  # noqa: E501
+        :type items: List[OneOfNowPlayingItemListItemsItems]
+        """
+        self.swagger_types = {
+            'items': List[OneOfNowPlayingItemListItemsItems]
+        }
+
+        self.attribute_map = {
+            'items': 'items'
+        }
+        self._items = items
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'NowPlayingItemList':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The NowPlayingItemList of this NowPlayingItemList.  # noqa: E501
+        :rtype: NowPlayingItemList
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def items(self) -> List[OneOfNowPlayingItemListItemsItems]:
+        """Gets the items of this NowPlayingItemList.
+
+
+        :return: The items of this NowPlayingItemList.
+        :rtype: List[OneOfNowPlayingItemListItemsItems]
+        """
+        return self._items
+
+    @items.setter
+    def items(self, items: List[OneOfNowPlayingItemListItemsItems]):
+        """Sets the items of this NowPlayingItemList.
+
+
+        :param items: The items of this NowPlayingItemList.
+        :type items: List[OneOfNowPlayingItemListItemsItems]
+        """
+        if items is None:
+            raise ValueError("Invalid value for `items`, must not be `None`")  # noqa: E501
+
+        self._items = items
