# src/api/models/song.py
@@ -1,0 +1,257 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from api.models.base_model_ import Model
+from api.models.now_playing_item import NowPlayingItem  # noqa: F401,E501
+from api import util
+
+
+class Song(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, text: str=None, type: str=None, start_time: datetime=None, end_time: datetime=None, artist: str=None, title: str=None, album: str=None, cover_art: str=None):  # noqa: E501
+        """Song - a model defined in Swagger
+
+        :param text: The text of this Song.  # noqa: E501
+        :type text: str
+        :param type: The type of this Song.  # noqa: E501
+        :type type: str
+        :param start_time: The start_time of this Song.  # noqa: E501
+        :type start_time: datetime
+        :param end_time: The end_time of this Song.  # noqa: E501
+        :type end_time: datetime
+        :param artist: The artist of this Song.  # noqa: E501
+        :type artist: str
+        :param title: The title of this Song.  # noqa: E501
+        :type title: str
+        :param album: The album of this Song.  # noqa: E501
+        :type album: str
+        :param cover_art: The cover_art of this Song.  # noqa: E501
+        :type cover_art: str
+        """
+        self.swagger_types = {
+            'text': str,
+            'type': str,
+            'start_time': datetime,
+            'end_time': datetime,
+            'artist': str,
+            'title': str,
+            'album': str,
+            'cover_art': str
+        }
+
+        self.attribute_map = {
+            'text': 'text',
+            'type': 'type',
+            'start_time': 'start_time',
+            'end_time': 'end_time',
+            'artist': 'artist',
+            'title': 'title',
+            'album': 'album',
+            'cover_art': 'cover_art'
+        }
+        self._text = text
+        self._type = type
+        self._start_time = start_time
+        self._end_time = end_time
+        self._artist = artist
+        self._title = title
+        self._album = album
+        self._cover_art = cover_art
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Song':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Song of this Song.  # noqa: E501
+        :rtype: Song
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def text(self) -> str:
+        """Gets the text of this Song.
+
+
+        :return: The text of this Song.
+        :rtype: str
+        """
+        return self._text
+
+    @text.setter
+    def text(self, text: str):
+        """Sets the text of this Song.
+
+
+        :param text: The text of this Song.
+        :type text: str
+        """
+        if text is None:
+            raise ValueError("Invalid value for `text`, must not be `None`")  # noqa: E501
+
+        self._text = text
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this Song.
+
+
+        :return: The type of this Song.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this Song.
+
+
+        :param type: The type of this Song.
+        :type type: str
+        """
+        allowed_values = ["song", "programme"]  # noqa: E501
+        if type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `type` ({0}), must be one of {1}"
+                .format(type, allowed_values)
+            )
+
+        self._type = type
+
+    @property
+    def start_time(self) -> datetime:
+        """Gets the start_time of this Song.
+
+
+        :return: The start_time of this Song.
+        :rtype: datetime
+        """
+        return self._start_time
+
+    @start_time.setter
+    def start_time(self, start_time: datetime):
+        """Sets the start_time of this Song.
+
+
+        :param start_time: The start_time of this Song.
+        :type start_time: datetime
+        """
+
+        self._start_time = start_time
+
+    @property
+    def end_time(self) -> datetime:
+        """Gets the end_time of this Song.
+
+
+        :return: The end_time of this Song.
+        :rtype: datetime
+        """
+        return self._end_time
+
+    @end_time.setter
+    def end_time(self, end_time: datetime):
+        """Sets the end_time of this Song.
+
+
+        :param end_time: The end_time of this Song.
+        :type end_time: datetime
+        """
+
+        self._end_time = end_time
+
+    @property
+    def artist(self) -> str:
+        """Gets the artist of this Song.
+
+
+        :return: The artist of this Song.
+        :rtype: str
+        """
+        return self._artist
+
+    @artist.setter
+    def artist(self, artist: str):
+        """Sets the artist of this Song.
+
+
+        :param artist: The artist of this Song.
+        :type artist: str
+        """
+        if artist is None:
+            raise ValueError("Invalid value for `artist`, must not be `None`")  # noqa: E501
+
+        self._artist = artist
+
+    @property
+    def title(self) -> str:
+        """Gets the title of this Song.
+
+
+        :return: The title of this Song.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title: str):
+        """Sets the title of this Song.
+
+
+        :param title: The title of this Song.
+        :type title: str
+        """
+        if title is None:
+            raise ValueError("Invalid value for `title`, must not be `None`")  # noqa: E501
+
+        self._title = title
+
+    @property
+    def album(self) -> str:
+        """Gets the album of this Song.
+
+
+        :return: The album of this Song.
+        :rtype: str
+        """
+        return self._album
+
+    @album.setter
+    def album(self, album: str):
+        """Sets the album of this Song.
+
+
+        :param album: The album of this Song.
+        :type album: str
+        """
+
+        self._album = album
+
+    @property
+    def cover_art(self) -> str:
+        """Gets the cover_art of this Song.
+
+
+        :return: The cover_art of this Song.
+        :rtype: str
+        """
+        return self._cover_art
+
+    @cover_art.setter
+    def cover_art(self, cover_art: str):
+        """Sets the cover_art of this Song.
+
+
+        :param cover_art: The cover_art of this Song.
+        :type cover_art: str
+        """
+
+        self._cover_art = cover_art
